fix(footer): PCCK-13545 adjust spacings of footer and new pattern variation for mobile

--- a/core/ui-kit/src/modules/footer/footer.scss
+++ b/core/ui-kit/src/modules/footer/footer.scss
@@ -10,8 +10,8 @@
   &__paragraph {
     @include -text-color-white;
     @include -text-size-copy;
-    @include -spacing-f;
-    @include -spacing-f(top, padding);
+    @include -spacing-e;
+    @include -spacing-e(top, padding);
 
     border-top: $footer-paragraph-border-width solid $footer-paragraph-border-color;
 
